# groopsio

./: CMakeLists.txt  README.md  setup.py  sources.list
groopsio/: __init__.py  io.py
src/: groopsio.cpp  groopsio.h
